Use correct package capitalisation
CPS has the following two packages:

1. `Microsoft.VisualStudio.ProjectSystem.SDK`
2. `Microsoft.VisualStudio.ProjectSystem.Sdk.Tools`

Before this commit, we would reference:

1. `Microsoft.VisualStudio.ProjectSystem.SDK`
2. `Microsoft.VisualStudio.ProjectSystem.SDK.Tools`

Note how we use different capitalisation.

This should be supported through all the tooling, but it's nice to have them match reality. See also #9360.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -72,7 +72,7 @@
     <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.Analyzers"                         Version="$(CPSPackageVersion)" />
     <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.Query"                             Version="$(CPSPackageVersion)" />
     <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.SDK"                               Version="$(CPSPackageVersion)" />
-    <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.SDK.Tools"                         Version="$(CPSPackageVersion)" />
+    <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.Sdk.Tools"                         Version="$(CPSPackageVersion)" />
     <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.VS"                                Version="$(CPSPackageVersion)" />
     <PackageVersion Include="Microsoft.VisualStudio.ProjectSystem.XamlTypes"                         Version="$(CPSPackageVersion)" />
 
