--- a/.github/policies/resourceManagement.yml
+++ b/.github/policies/resourceManagement.yml
@@ -38,7 +38,8 @@ configuration:
     - if:
       - payloadType: Pull_Request
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       - targetsBranch:
           branch: main
       then:
@@ -52,7 +53,8 @@ configuration:
       - targetsBranch:
           branch: dev17.2.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 17.2
@@ -70,7 +72,8 @@ configuration:
       - targetsBranch:
           branch: dev16.8.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 16.8
@@ -97,7 +100,8 @@ configuration:
       - targetsBranch:
           branch: dev16.9.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 16.9
@@ -107,7 +111,8 @@ configuration:
       - targetsBranch:
           branch: dev16.10.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 16.10
@@ -117,7 +122,8 @@ configuration:
       - targetsBranch:
           branch: dev17.0.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 17.0
@@ -127,7 +133,8 @@ configuration:
       - targetsBranch:
           branch: dev16.11.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 16.11
@@ -137,7 +144,8 @@ configuration:
       - targetsBranch:
           branch: dev17.1.x
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       then:
       - addMilestone:
           milestone: 17.1
@@ -145,7 +153,8 @@ configuration:
     - if:
       - payloadType: Pull_Request
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       - or:
         - targetsBranch:
             branch: dev17.3.x
@@ -158,7 +167,8 @@ configuration:
     - if:
       - payloadType: Pull_Request
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       - or:
         - targetsBranch:
             branch: dev17.4-preview1
@@ -173,7 +183,8 @@ configuration:
     - if:
       - payloadType: Pull_Request
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       - or:
         - targetsBranch:
             branch: dev17.5-x
@@ -184,7 +195,8 @@ configuration:
     - if:
       - payloadType: Pull_Request
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       - or:
         - targetsBranch:
             branch: dev17.7-x
@@ -195,7 +207,8 @@ configuration:
     - if:
       - payloadType: Pull_Request
       - isAction:
-          action: Null
+          action: Closed
+      - isMerged
       - or:
         - targetsBranch:
             branch: dev17.8.x
@@ -204,4 +217,4 @@ configuration:
           milestone: 17.8
       description: Milestone tracking - 17.8
 onFailure: 
-onSuccess: 
+onSuccess:
