--- a/eng/imports/Versions.props
+++ b/eng/imports/Versions.props
@@ -1,6 +1,6 @@
 <!-- Any changes to this file or format requires updates in project-system-vscode -->
 <Project>
   <PropertyGroup>
-    <CPSPackageVersion>17.12.21-pre</CPSPackageVersion>
+    <CPSPackageVersion>17.12.127</CPSPackageVersion>
   </PropertyGroup>
 </Project>
